--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             </div>
             <i id="wish" class="ri-heart-line"></i>
         </div>
-        <img id="imgone" src="/Path 1.png" alt="pic">
+        <img id="imgone" src="Path 1.png" alt="pic">
         <i id="right-arrow" class="ri-arrow-right-line"></i>
     </div>
     <div id="center-hero">
         <div id="can-back">
-            <img id="pepsi" src="/pepsi.png" alt="pepsi">
-            <img id="path2" src="/Path 2.png" alt="pic">
+            <img id="pepsi" src="pepsi.png" alt="pepsi">
+            <img id="path2" src="Path 2.png" alt="pic">
             <div id="small-ball">
                 <div id="ball1"></div>
                 <div id="ball2"></div>
