--- a/index.html
+++ b/index.html
@@ -101,8 +101,18 @@
             <i class="ri-subtract-line"></i>
         </div>
         <p>Fresh, tangy and zesty lime with refereshing minty notes</p>
-         </div>
     </div>
 </div>
+
+<div id="special-offers">
+    <h2>Special Offers</h2>
+    <p>Check out our special offers on Pepsi products!</p>
+    <ul>
+        <li>Buy 1 Get 1 Free</li>
+        <li>25% off on 2nd purchase</li>
+        <li>Combo offers available</li>
+    </ul>
+</div>
+
 </body>
 </html>
