--- a/index.html
+++ b/index.html
@@ -23,96 +23,115 @@
             <div id="nav-right">
                 <i class="ri-heart-line"></i>
                 <div id="cart">
-                <i class="ri-shopping-cart-2-line"></i>
-                <div id="cart-number">
-                    <h6>2</h6>
+                    <i class="ri-shopping-cart-2-line"></i>
+                    <div id="cart-number">
+                        <h6>2</h6>
+                    </div>
                 </div>
+                <div id="account"></div>
             </div>
-            <div id="account"></div>
         </div>
     </div>
     <div id="hero">
         <div id="left-hero">
-        <h1>Freshness</h1>
-        <h1>start's</h1>
-        <div id="here">
-            <h1>here</h1>
-            <div id="energy">
-                <i class="ri-flashlight-line"></i>
-            </div>
-        </div>
-        <h2>$9.99</h2>
-        <p>Fresh, tangy and tasty cold drink <br>with refreshing minty notes</p>
-        <div id="add-to-cart">
-            <div id="cart-btn">
-                <i class="ri-shopping-bag-line"></i>
-                <h3>Add to cart</h3>
-            </div>
-            <i id="wish" class="ri-heart-line"></i>
-        </div>
-        <img id="imgone" src="Path 1.png" alt="pic">
-        <i id="right-arrow" class="ri-arrow-right-line"></i>
-    </div>
-    <div id="center-hero">
-        <div id="can-back">
-            <img id="pepsi" src="pepsi.png" alt="pepsi">
-            <img id="path2" src="Path 2.png" alt="pic">
-            <div id="small-ball">
-                <div id="ball1"></div>
-                <div id="ball2"></div>
-                <div id="ball3"></div>
-            </div>
-            <div id="scroll">
-                <i class="ri-arrow-down-line"></i>
-            </div>
-            <div id="lft-float" class="float-comment">
-                <div class="pixone" id="pic"></div>
-                <h1><span>Moyo Shiro </span>has <br>just purchased</h1>
-                <div id="lock">
-                    <i class="ri-lock-line"></i>
+            <h1>Freshness</h1>
+            <h1>start's</h1>
+            <div id="here">
+                <h1>here</h1>
+                <div id="energy">
+                    <i class="ri-flashlight-line"></i>
                 </div>
             </div>
-            <div id="rght-float" class="float-comment">
-                <div class="pixtwo" id="pic"></div>
-                <h1><span>Kohaku</span>has liked<br>this item</h1>
-                <div id="lock">
-                    <i class="ri-heart-fill"></i>
+            <h2>$9.99</h2>
+            <p>Fresh, tangy and tasty cold drink <br>with refreshing minty notes</p>
+            <div id="add-to-cart">
+                <div id="cart-btn">
+                    <i class="ri-shopping-bag-line"></i>
+                    <h3>Add to cart</h3>
+                </div>
+                <i id="wish" class="ri-heart-line"></i>
+            </div>
+            <img id="imgone" src="Path 1.png" alt="pic">
+            <i id="right-arrow" class="ri-arrow-right-line"></i>
+        </div>
+        <div id="center-hero">
+            <div id="can-back">
+                <img id="pepsi" src="pepsi.png" alt="pepsi">
+                <img id="path2" src="Path 2.png" alt="pic">
+                <div id="small-ball">
+                    <div id="ball1"></div>
+                    <div id="ball2"></div>
+                    <div id="ball3"></div>
+                </div>
+                <div id="scroll">
+                    <i class="ri-arrow-down-line"></i>
+                </div>
+                <div id="lft-float" class="float-comment">
+                    <div class="pixone" id="pic"></div>
+                    <h1><span>Moyo Shiro </span>has <br>just purchased</h1>
+                    <div id="lock">
+                        <i class="ri-lock-line"></i>
+                    </div>
+                </div>
+                <div id="rght-float" class="float-comment">
+                    <div class="pixtwo" id="pic"></div>
+                    <h1><span>Kohaku</span>has liked<br>this item</h1>
+                    <div id="lock">
+                        <i class="ri-heart-fill"></i>
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="right-hero">
+            <div id="lft-rght">
+                <i class="ri-arrow-left-line"></i>
+                <i class="ri-arrow-right-line"></i>
+            </div>
+            <div id="expand-one" class="expand">
+                <h1>Description</h1>
+                <i class="ri-add-line"></i>
+            </div>
+            <hr>
+            <div class="expand">
+                <h1>Nutrition</h1>
+                <i class="ri-add-line"></i>
+            </div>
+            <hr>
+            <div class="expand">
+                <h1 id="int">Ingredients</h1>
+                <i class="ri-subtract-line"></i>
+            </div>
+            <p>Fresh, tangy and zesty lime with refreshing minty notes</p>
+        </div>
     </div>
-    <div id="right-hero">
-        <div id="lft-rght">
-            <i class="ri-arrow-left-line"></i>
-            <i class="ri-arrow-right-line"></i>
-        </div>
-        <div id="expand-one" class="expand">
-            <h1>Description</h1>
-            <i class="ri-add-line"></i>
-        </div>
-        <hr>
-        <div class="expand">
-            <h1>Nutrition</h1>
-            <i class="ri-add-line"></i>
-        </div>
-        <hr>
-        <div class="expand">
-            <h1 id="int">Ingredients</h1>
-            <i class="ri-subtract-line"></i>
-        </div>
-        <p>Fresh, tangy and zesty lime with refereshing minty notes</p>
-    </div>
-</div>
 
-<div id="special-offers">
-    <h2>Special Offers</h2>
-    <p>Check out our special offers on Pepsi products!</p>
-    <ul>
-        <li>Buy 1 Get 1 Free</li>
-        <li>25% off on 2nd purchase</li>
-        <li>Combo offers available</li>
-    </ul>
-</div>
+    <div id="special-offers">
+        <h2>Special Offers</h2>
+        <p>Check out our special offers on Pepsi products!</p>
+        <ul>
+            <li>Buy 1 Get 1 Free</li>
+            <li>25% off on 2nd purchase</li>
+            <li>Combo offers available</li>
+        </ul>
+    </div>
+
+    <div id="contact-us">
+        <h2>Contact Us</h2>
+        <p>If you have any questions or feedback, feel free to get in touch with us.</p>
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br><br>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br><br>
+
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" required></textarea><br><br>
+
+            <input type="submit" value="Submit">
+        </form>
+    </div>
 
 </body>
 </html>
+
