--- a/index.html
+++ b/index.html
@@ -132,6 +132,23 @@
         </form>
     </div>
 
+    <!-- Testimonials Section -->
+    <div id="testimonials">
+        <h2>Testimonials</h2>
+        <div class="testimonial">
+            <div class="testimonial-author">
+                <img src="user1.jpg" alt="User 1">
+                <h3>John Doe</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor velit vel justo euismod, in dignissim libero posuere. Proin vitae ullamcorper nulla. Nulla facilisi.</p>
+        </div>
+        <div class="testimonial">
+            <div class="testimonial-author">
+                <img src="user2.jpg" alt="User 2">
+                <h3>Jane Smith</h3>
+            </div>
+            <p>Integer nec libero nec nisi bibendum rhoncus vel in felis. Nulla facilisi. Aenean suscipit sapien eu feugiat venenatis.</p>
+        </div>
+    </div>
 </body>
 </html>
-
