Updated index.html as per Issue #5
The first two improvements of content as stated in #5 is made.

--- a/index.html
+++ b/index.html
@@ -88,29 +88,28 @@
                 <i class="ri-arrow-right-line"></i>
             </div>
             <div id="expand-one" class="expand">
-                <button type="button" class="collapsible">Description</button>
-                    <div class="content">
-                      <p>A carbonated soft drink manufactured by PepsiCo. Originally 
-                          created and developed in 1893 by Caleb Bradham and introduced 
-                          as Brad's Drink, it was renamed as Pepsi-Cola in 1898, and 
-                          then shortened to Pepsi in 1961. In 2022, it was the second 
-                          most valuable soft drink brand worldwide, behind Coca-Cola.</p>
-                    </div>
+                <h1>Description</h1>
+                <i class="ri-add-line"></i>
             </div>
+            <p>A carbonated soft drink manufactured by PepsiCo. Originally 
+                created and developed in 1893 by Caleb Bradham and introduced 
+                as Brad's Drink, it was renamed as Pepsi-Cola in 1898, and 
+                then shortened to Pepsi in 1961. In 2022, it was the second 
+                most valuable soft drink brand worldwide, behind Coca-Cola.</p>
             <hr>
             <div class="expand">
                 <h1>Nutrition</h1>
                 <i class="ri-add-line"></i>
-                <img id="nutrition_pic" src="Nutrition.png" alt="image not found">
             </div>
+            <img id="nutrition_pic" src="Nutrition.png" alt="image not found" height="130px" width="280px">
             <hr>
             <div class="expand">
                 <h1 id="int">Ingredients</h1>
                 <i class="ri-subtract-line"></i>
-                <p>Carbonated Water, Sugar, Colour (Caramel E150d), 
-                    Acid (Phosphoric Acid), Flavourings (including Caffeine), 
-                    Sweeteners (Acesulfame K, Sucralose).</p>
             </div>
+            <p>Carbonated Water, Sugar, Colour (Caramel E150d), 
+                Acid (Phosphoric Acid), Flavourings (including Caffeine), 
+                Sweeteners (Acesulfame K, Sucralose).</p>
         </div>
     </div>
 
