--- a/index.html
+++ b/index.html
@@ -139,6 +139,16 @@
             <input type="submit" value="Submit">
         </form>
     </div>
+    <h2 style="margin: auto;">Our other products</h2>
+    <div class="other_product">
+        
+        <img src="https://m.media-amazon.com/images/I/51-r9pOh08L.jpg" alt="">
+        <img src="https://www.pepsico.com/images/default-source/products-brands/pepsi_zero.png?sfvrsn=2a0e6695_3" alt="">
+        <img src="https://m.media-amazon.com/images/I/61lyuVhNEzL._AC_UF1000,1000_QL80_.jpg" alt="">
+        <img src="https://e7.pngegg.com/pngimages/383/353/png-clipart-pepsi-invaders-coca-cola-beer-juice-canned-pepsi-products-in-kind-blue-cola.png" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuBBOPMEvWqDTakf7tPJLXI4MTR8pyOlm3TA&usqp=CAU" alt="">
+
+    </div>
 
 </body>
 </html>
