added contact us section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div id="nav-left">
                 <a href="#">Category</a>
                 <a href="#">Lifestyle</a>
+                <a href="#contact-us">Contact Us</a>
                 <a href="#">Books</a>
             </div>
             <div id="nav-center">
@@ -123,22 +124,22 @@
         </ul>
     </div>
 
-    <div id="contact-us">
-        <h2>Contact Us</h2>
-        <p>If you have any questions or feedback, feel free to get in touch with us.</p>
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required><br><br>
+    <section id="contact-us">
+            <h2>Contact Us</h2>
+            <p>If you have any questions or feedback, feel free to get in touch with us.</p>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br><br>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br><br>
 
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="4" required></textarea><br><br>
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="4" required></textarea><br><br>
 
-            <input type="submit" value="Submit">
-        </form>
-    </div>
+                <input type="submit" value="Submit">
+            </form>
+        </section>
 
 </body>
 </html>
