modified contact us and added fonts

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -123,9 +125,9 @@
             <li>Combo offers available</li>
         </ul>
     </div>
-
+ <div class="contact">
     <section id="contact-us">
-            <h2>Contact Us</h2>
+        <div class="contact-con">           <h2 id="ch2">Contact Us</h2>
             <p>If you have any questions or feedback, feel free to get in touch with us.</p>
             <form>
                 <label for="name">Name:</label>
@@ -139,7 +141,9 @@
 
                 <input type="submit" value="Submit">
             </form>
+        </div> 
         </section>
+    </div>
 
 </body>
 </html>
