Added placeholder to contact us form and added the footer

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             <p>If you have any questions or feedback, feel free to get in touch with us.</p>
             <form>
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br><br>
+                <input type="text" id="name" name="name" placeholder="Enter Name" required><br><br>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br><br>
+                <input type="email" id="email" placeholder="Ex:abc@gmail.com" name="email" required><br><br>
 
                 <label for="message">Message:</label><br>
                 <textarea id="message" name="message" rows="4" required></textarea><br><br>
@@ -163,5 +163,18 @@
             <p>Integer nec libero nec nisi bibendum rhoncus vel in felis. Nulla facilisi. Aenean suscipit sapien eu feugiat venenatis.</p>
         </div>
     </div>
+
+<br>
+    
+    <footer style="background-color: black;">
+        <center>
+            <p style="color: white;">&copy; 2023 Pepsi</p>
+        </center>
+    </footer>
+
+    </body>
+    
+    </html>
+
 </body>
 </html>
