add scroll smooth and fix name menu

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <a href="#">Category</a>
                 <a href="#">Lifestyle</a>
                 <a href="#contact-us">Contact Us</a>
-                <a href="#testimonials">Users</a>
-                <a href="#gallery">Users</a>
+                <a href="#testimonials">Testimonials</a>
+                <a href="#gallery">Gallery</a>
                 <a href="#">Books</a>
             </div>
             <div id="nav-center">
@@ -90,9 +90,9 @@
                     <div id="ball2"></div>
                     <div id="ball3"></div>
                 </div>
-                <div id="scroll">
+                <a id="scroll" href="#gallery">
                     <i class="ri-arrow-down-line"></i>
-                </div>
+                </a>
                 <div id="lft-float" class="float-comment">
                     <div class="pixone" id="pic"></div>
                     <h1><span>Moyo Shiro </span>has <br>just purchased</h1>
